bindings/csharp/Urngz.NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Urngz
{
    public static unsafe partial class NativeMethods
    {
        const string __DllName = "urngz_cabi";





        [DllImport(__DllName, EntryPoint = "sfc32_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_sfc32* sfc32_new(uint seed);

        [DllImport(__DllName, EntryPoint = "sfc32_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32_free(urngz_sfc32* rng);

        [DllImport(__DllName, EntryPoint = "sfc32_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32_nextu(urngz_sfc32* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "sfc32_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32_nextf(urngz_sfc32* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "sfc32_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32_randi(urngz_sfc32* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "sfc32_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32_randf(urngz_sfc32* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "sfc32x16_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_sfc32x16* sfc32x16_new(uint seed);

        [DllImport(__DllName, EntryPoint = "sfc32x16_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32x16_free(urngz_sfc32x16* rng);

        [DllImport(__DllName, EntryPoint = "sfc32x16_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32x16_nextu(urngz_sfc32x16* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "sfc32x16_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32x16_nextf(urngz_sfc32x16* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "sfc32x16_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32x16_randi(urngz_sfc32x16* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "sfc32x16_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sfc32x16_randf(urngz_sfc32x16* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_pcg32* pcg32_new(ulong seed);

        [DllImport(__DllName, EntryPoint = "pcg32_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32_free(urngz_pcg32* rng);

        [DllImport(__DllName, EntryPoint = "pcg32_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32_nextu(urngz_pcg32* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32_nextf(urngz_pcg32* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32_randi(urngz_pcg32* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32_randf(urngz_pcg32* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32x8_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_pcg32x8* pcg32x8_new(ulong seed);

        [DllImport(__DllName, EntryPoint = "pcg32x8_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32x8_free(urngz_pcg32x8* rng);

        [DllImport(__DllName, EntryPoint = "pcg32x8_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32x8_nextu(urngz_pcg32x8* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32x8_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32x8_nextf(urngz_pcg32x8* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32x8_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32x8_randi(urngz_pcg32x8* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "pcg32x8_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void pcg32x8_randf(urngz_pcg32x8* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_jsf32* jsf32_new(uint seed);

        [DllImport(__DllName, EntryPoint = "jsf32_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32_free(urngz_jsf32* rng);

        [DllImport(__DllName, EntryPoint = "jsf32_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32_nextu(urngz_jsf32* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32_nextf(urngz_jsf32* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32_randi(urngz_jsf32* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32_randf(urngz_jsf32* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32x16_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_jsf32x16* jsf32x16_new(uint seed);

        [DllImport(__DllName, EntryPoint = "jsf32x16_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32x16_free(urngz_jsf32x16* rng);

        [DllImport(__DllName, EntryPoint = "jsf32x16_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32x16_nextu(urngz_jsf32x16* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32x16_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32x16_nextf(urngz_jsf32x16* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32x16_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32x16_randi(urngz_jsf32x16* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "jsf32x16_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void jsf32x16_randf(urngz_jsf32x16* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128pp_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_xoshiro128pp* xoshiro128pp_new(uint seed);

        [DllImport(__DllName, EntryPoint = "xoshiro128pp_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128pp_free(urngz_xoshiro128pp* rng);

        [DllImport(__DllName, EntryPoint = "xoshiro128pp_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128pp_nextu(urngz_xoshiro128pp* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128pp_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128pp_nextf(urngz_xoshiro128pp* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128pp_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128pp_randi(urngz_xoshiro128pp* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128pp_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128pp_randf(urngz_xoshiro128pp* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ss_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_xoshiro128ss* xoshiro128ss_new(uint seed);

        [DllImport(__DllName, EntryPoint = "xoshiro128ss_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ss_free(urngz_xoshiro128ss* rng);

        [DllImport(__DllName, EntryPoint = "xoshiro128ss_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ss_nextu(urngz_xoshiro128ss* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ss_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ss_nextf(urngz_xoshiro128ss* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ss_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ss_randi(urngz_xoshiro128ss* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ss_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ss_randf(urngz_xoshiro128ss* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ppx16_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_xoshiro128ppx16* xoshiro128ppx16_new(uint seed);

        [DllImport(__DllName, EntryPoint = "xoshiro128ppx16_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ppx16_free(urngz_xoshiro128ppx16* rng);

        [DllImport(__DllName, EntryPoint = "xoshiro128ppx16_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ppx16_nextu(urngz_xoshiro128ppx16* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ppx16_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ppx16_nextf(urngz_xoshiro128ppx16* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ppx16_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ppx16_randi(urngz_xoshiro128ppx16* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ppx16_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ppx16_randf(urngz_xoshiro128ppx16* rng, float* @out, float min, float max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ssx16_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern urngz_xoshiro128ssx16* xoshiro128ssx16_new(uint seed);

        [DllImport(__DllName, EntryPoint = "xoshiro128ssx16_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ssx16_free(urngz_xoshiro128ssx16* rng);

        [DllImport(__DllName, EntryPoint = "xoshiro128ssx16_nextu", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ssx16_nextu(urngz_xoshiro128ssx16* rng, uint* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ssx16_nextf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ssx16_nextf(urngz_xoshiro128ssx16* rng, float* @out, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ssx16_randi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ssx16_randi(urngz_xoshiro128ssx16* rng, int* @out, int min, int max, System.UIntPtr count);

        [DllImport(__DllName, EntryPoint = "xoshiro128ssx16_randf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void xoshiro128ssx16_randf(urngz_xoshiro128ssx16* rng, float* @out, float min, float max, System.UIntPtr count);


    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_sfc32
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_sfc32x16
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_pcg32
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_pcg32x8
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_jsf32
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_jsf32x16
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_xoshiro128ss
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_xoshiro128ssx16
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_xoshiro128pp
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct urngz_xoshiro128ppx16
    {
        public fixed byte _unused[1];
    }



}
